plugins/custom-recipe-management/assets/css/custom-recipe.css
/* Custom Recipe Template
-------------------------------------------*/

/* Variables */
:root {
  --recipe-image-heigth: 600px;
}

/* Fonts */

.recipe-container {
	font-family: Cabin, sans-serif;
	font-size:18px;
	color:#1a1a1a;
	font-weight:normal;
}

/*.recipe .entry-content p,*/
.recipe-container#intro {
	font-family: Vollkorn, serif;
	font-size:18px;
}

.recipe-container#image {
    position: relative;
    height: var(--recipe-image-heigth);
}

li.ingredient-group,
.recipe-instruction-group {
	font-family:"Oswald";
	display: block;
	color:#656565;
	font-size:20px;
}

.ingredients-container {
	font-size: 17px;
}

.recipe-instruction-bullet {
	font-family: Oswald, sans-serif;
}

span.wpurp-recipe-ingredient-notes.recipe-ingredient-notes {
	font-style: italic;
	font-size: 15px;
}


/* Image */

.image-container {
	/* min-width:300px;
	max-width:50%; */
	/* float:left; */
	padding:0px;
	z-index: 0;
	position: absolute;
	height: var(--recipe-image-heigth);
	width: 100%;
}

.recipe-img {
	width:inherit;
	float:left;
}

.image-container img {
	width:100%;
	max-height:var(--recipe-image-heigth);
	float:left;
	object-fit:cover;
	object-position: 0 0;
	overflow: hidden;
}


/* Recipe toolbar :
-------------------------------------------------*/

span.favorite-icon {
	display: inline-block;
	/* position: absolute; */
	/* right: 10px; */
    font-size: 20px;
    width: 25px;
    text-align: center;
    color: #5a5a5a;
}

.entry-content ul.favlist {
	padding: 0;
}

.entry-content ul li.favlist-item {
	list-style-type: none;
	margin: 7px 0;
	padding: 7px 10px;
	width:100%;
	border-radius: 5px;
}

.entry-content ul li.favlist-item:hover {
	background-color : #e8e8e8;
	cursor:pointer;
}

.entry-content ul li.favlist-item.isfav {
	background-color : #e4e4e4;
	/* border: 1px solid #a9a9a9; */
}

/* Popup Forms
-------------------------------------------------*/

.rating-form h3#reply-title {
    display: none;
}



/* Recipe info : rating, tags
-------------------------------------------------*/
.info-container {
	/* float:left; */
	z-index: 9999;
	position: absolute;
	right: 0;
	bottom: 0;
	/* max-width:50%; */
	/* height: var(--recipe-image-heigth); */
	/* padding: 50px 0px; */
	padding: 10px;
	margin: 10px;
    border-radius: 5px;

	/* background: linear-gradient(90deg, #ffffff85, white); */
	background: #ffffffa3;
	color: #484848;
	font-size: 1.8rem;
	font-weight: bold;
	/* padding-left:30px; */
	user-select: none;
	-webkit-user-select: none;  /* Chrome all / Safari all */
	-moz-user-select: none;     /* Firefox all */
	-ms-user-select: none;      /* IE 10+ */
}


.label-container {
	margin-bottom:12px;
	clear: both;
	float:left;
}

.wpurp-recipe-instruction-container {
	padding-top:0;
}

.recipe-container .rating {
	font-size:24px;
}

.recipe-container .fa-stack {
	margin:0 2px;
}

.recipe-label {
	display:inline-block;
	/* vertical-align:bottom; */
	width:120px;
	/* font-weight:bold; */
	font-family: Oswald;
	font-size: 1.6rem;
	font-weight: normal;
}

.recipe-label:before {
	font-family: FontAwesome;
	font-weight: normal;
	width:20px;
	float:left;
}

#servings .recipe-label:before {
	content:"\f0f5";
}

#tag .recipe-label:before {
	content:"\f02b";
}

#prep .recipe-label:before {
	content:"\f256";
}

#cook .recipe-label:before {
	content:"\f252";
}

#passive .recipe-label:before {
	content:"\f04c";
}

/*#servings .fa {
  color: #797979;
  font-size: 26px;
}

#servings .fa:hover {
  color: #222;
}

#servings .fa#dec {
    margin-right: 5px;
}

#servings .fa#inc {
    margin-left: 5px;
}

#servings .recipe-label,
#servings .recipe-input,
#servings #dec,
#servings #inc {
  display: inline-block;
  vertical-align: middle;
}*/

.servings-input {
    /* font-weight: bold; */
    border-bottom: 1px solid #d0d0d0;
    padding: 5px;
	margin: 0px 5px;
    font-family: Oswald;
    color: #585858;
	font-size: 1.9rem;
	user-select: none;
}

table.recipe-input {
	display: inline-block;
	vertical-align: middle;
}


.fa.qty {
	width:34px;
    /*padding: 0 0 0 8px;*/
    padding: 0 0 0 7px;
    font-size: 20px;
}

.fa.qty:active {
  font-size: 24px;
  /*transform: translateY(2px);*/
}

.fa.qty#dec {
}
.fa.qty#inc {
}

.fa.qty:before {
    display: inline-block;
    vertical-align: middle;
  	color: #797979;
}

.fa.qty:hover:before {
  	color: inherit;
    /*font-size:20px;    */
    /*padding: 0 0px;*/
}

.fa.qty#inc:before {
	/*content: '\f067';*//*fa-plus*/
	content: '\f055';/*fa-plus-circle*/
}
.fa.qty#dec:before {
	/*content: '\f068';*//*fa-minus*/
	content: '\f056';/*fa-minus-circle*/
}

/*.fa.qty.inc:hover:before {
	content: '\f055';
}
.fa.qty.dec:hover:before {
	content: '\f056';
}*/

input.adjust-recipe-servings {
	width: 40px;
	text-align: center;
	vertical-align: middle;
	padding: 6px;
	background:white;
	border:1px solid #e2e2e2;
	border-radius:5px;
	/*border:none;*/
	line-height:20px;
	font-size:16px;
}

/* Ingredients */

.ingredients-container {
    float: left;
    /* border: 2px solid #adadad; */
    width: 50%;
    margin: 0 30px 10px 0;
    padding: 10px 5px;
    text-decoration: none;
    border-radius: 10px;
}

.ingredients-container .entry-content ul li {
  list-style-type: decimal;
  display: block;
}

li.ingredient-group {
    margin-bottom: 10px;
}

ul.wpurp-recipe-ingredients {
  margin: 0 0 10px 0;
}

li.wpurp-recipe-ingredient a {
	text-decoration: none;
	color:#1a1a1a;
	border-bottom:1px dashed #9a9a9a;
}

li.wpurp-recipe-ingredient a:hover {
	border-bottom:1px dashed #000;
}

.entry-content ul li.wpurp-recipe-ingredient {
    list-style-type: none;
}

li.wpurp-recipe-ingredient .checkbox:before {
    display: inline-block;
    vertical-align: middle;
	font-family: fontAwesome;
	content: "\f096"; /*fa-square-o*/
	width: 20px;
    font-size: 20px;
    /*padding-bottom: 3px;	*/
}

li.wpurp-recipe-ingredient .checkbox:hover {
	cursor: pointer;
}

li.wpurp-recipe-ingredient .checkbox.clicked:before {
	content: "\f046"; /*fa-check-square-o*/
}


/* Instructions */
.recipe-instruction-group {
 	font-size:26px;
 	line-height:30px;
 	margin-bottom:10px;
}

ol.wpurp-recipe-instructions {
    list-style-position: inside;
    padding: 10px 0;
}

li.wpurp-recipe-instruction.li-first.li-last,
.entry-content ul li.wpurp-recipe-instruction {
	list-style-type: none;
	text-align: left;
}

li.wpurp-recipe-instruction {
	list-style-position: inside;
	margin-bottom: 20px;
	text-align:justify;
}


/* Recipe instruction bullet formatting
---------------------------------------*/

.recipe-instruction-bullet {
	display: inline-block;
    background: #f8f8f8;
    /* color: #616161; */
    color: #939393;
    width: 50px;
    height: 50px;
    margin-right: 10px;
    text-align: center;
	font-size: 35px;
	border : none;
    /* border-bottom: 2px solid #CCC; */
    line-height: 45px;
	border-radius: 50%;
	position:relative;
	border: 2px solid transparent;
	/* border: 2px solid blue; */
	animation-delay: 0s;
	cursor:pointer;
	transition: border-width 50ms ease-in-out;
	transition: background-color 50ms ease-in-out;
}

.recipe-instruction-bullet:hover {
	background-color:#d8d8d8;
}


.recipe-instruction-bullet .ring {
/* .recipe-instruction-bullet .ring { */
	position: absolute;
	border-radius: 50%;
	border: 2px solid transparent;
	/* border: 2px solid green; */
	background-color: transparent;
}

#r1 {
	width: 54px;
	height: 54px;
	top:-4px;
	left:-4px;
	/* border-color: red; */
	animation-delay: 200ms;
}

#r2 {
	width: 58px;
	height: 58px;
	top:-6px;
	left:-6px;
	animation-delay: 400ms;
}

.recipe-instruction-bullet.read {
	border-color: #adadad;
}
.recipe-instruction-bullet.reading,
.recipe-instruction-bullet.reading .ring {
/* .recipe-instruction-bullet, */
/* .recipe-instruction-bullet .ring { */
	animation-name: ani;
	animation-iteration-count: infinite;
	animation-timing-function: linear;
	animation-duration: 800ms;
	animation-direction: normal;
}

@keyframes ani {
	0% {border-color: #adadad}
	25% {border-color: #cccccc}
	75% {border-color: #ededed;}
	75% {border-color: #ffffff;}
}



/* Recipe reader addon
----------------------------------------------------------- */
#custom-reader-container {
   position: fixed;
   z-index: 16777271;
   left: 0;
   right: 0;
   bottom: 0;
   height: 0;
   font-size: 24px;
   font-family: monospace,sans-serif;
   line-height: 24px;
   background-color: #ffffffd6;
   transition: height .5s ease-in-out;
   border-top: 1px dotted #5c5c5c;
}

#custom-reader-container.open {
	height:80px;
}

#custom-reader-container .custom-reader-icon {
	cursor: pointer;
    padding: 0 10px;
    display: inline-block;
    text-align: center;
    font-size: 50px;
	/* color: #ffffff; */
	/* color: #e6e6e6; */
	color: #717171;
	margin: 10px 0px 0 0px;
	vertical-align: middle;
	width: 80px;
	height: 80px;
	transition: color 500ms ease-in-out, font-size 300ms ease-in-out;
}

#custom-reader-container .custom-reader-icon:hover {
	/* color: #1f1f1f; */
	color: #545454;
	text-shadow: 4px 4px 8px #909090;
	/* font-size:60px; */
}

#custom-reader-container .wrapper {
    display: inline-block;
    text-align: center;
    width: 100%;
}

#custom-reader-container .custom-reader-icon svg {
	display: table-cell;
	vertical-align: middle;
	width: 24px;
	height: 24px;
}
#custom-reader-container span {
	display: table-cell;
	vertical-align: middle;
}
#custom-reader-container span#custom-reader-bar-container {
	width: 100%;
	padding: 0 10px 0 15px;
}
#custom-reader-container span#custom-reader-bar-container #custom-reader-bar {
	display: block;
	border: 3px solid white;
	height: 24px;
	width: 100%;
}
#custom-reader-container span#custom-reader-bar-container #custom-reader-bar #custom-reader-bar-elapsed {
	display: block;
	height: 100%;
	width: 0%;
	background-color: white;
	border: 0;
}



/* Recipe timer WPURP addon
------------------------------------------------------------*/
#wpurp-timer-container {
  position: fixed;
  z-index: 16777271;
  left: 0;
  right: 0;
  bottom: 0;
  height: 50px;
  font-size: 24px;
  line-height: 50px;
  background-color: rgba(255,255,255,0.9);
  color: #000;
}
  #wpurp-timer-container .wpurp-timer-icon {
    cursor: pointer;
    padding: 0 10px;
}
#wpurp-timer-container .wpurp-timer-icon svg {
  display: table-cell;
  vertical-align: middle;
  width: 24px;
  height: 24px;
}
#wpurp-timer-container span {
	display: table-cell;
	vertical-align: middle;
}
#wpurp-timer-container span#wpurp-timer-bar-container {
	width: 100%;
	padding: 0 10px 0 15px;
}
#wpurp-timer-container span#wpurp-timer-bar-container #wpurp-timer-bar {
	display: block;
	border: 2px solid #000;
	height: 24px;
	width: 100%;
}

span#wpurp-timer-remaining {
    font-family: sans-serif;
}

#wpurp-timer-container span#wpurp-timer-bar-container #wpurp-timer-bar #wpurp-timer-bar-elapsed {
	display: block;
	height: 100%;
	width: 0%;
	background-color: #000;
	border: 0;
}


/* MEDIA QUERIES
---------------------------------------------------*/

@media only screen and (max-width:570px) {

	.tooltip:hover .tooltip-content.hover,
	.tooltip-content.hover:hover {
		display: none;
	}

	.image-container,
	.info-container,
	.wpurp-recipe-instruction-container,
	.ingredients-container {
		max-width:100%; /* this property is set for info-container in screen display*/
		width:100%;
		margin-bottom:20px;
		float:left;
		padding-left: 10px;
	}

	#custom-reader-container.open {
		height:60px;
	}

	#custom-reader-container .custom-reader-icon,
	#custom-reader-container .custom-reader-icon:hover {
		font-size:40px;
	}

	.recipe-top {
		margin-top:0;
	}

	li.wpurp-recipe-ingredient .checkbox:before {
		font-size: 22px;
		padding-bottom:3px;
	}

}

